--- a/Example.html
+++ b/Example.html
@@ -1,2 +1,7 @@
 <p>Hello World</p>
 <p>Hello South Africa</p>
+<p>
+  To learn about merge conflicts I created a new baranch and added a new
+  paragraph on the Example html file, and I added this p element in the main
+  branch before I merged the new new branch to the main
+</p>
